# ai-capital

./: .env  .env.template  .gitignore  README.md  bulk_ticker_ingestion.py  check_db_records.py  create_database.py  requirements.txt  run_s3_ingestion.py  s3_bulk_ingest.py  test_db_connection.py  test_tiingo_simple.py  todo.md
backend/: README.md  alembic.ini  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: create_sec_filings_table.py  drop_chunk_tables.py  e13b299f59c1_create_financial_tables.py
backend/app/: config.py  main.py  sec_utils.py
backend/app/api/: deps.py  summary_endpoint.py
backend/app/core/: config.py  llm_services.py  summary_generation.py
backend/app/db/: database_utils.py  init_db.py  session.py
backend/app/domains/: README.md  __init__.py
backend/app/ingestion/: ingest_filings.py
backend/app/models/: company.py  filings.py  financials.py  fundamentals.py  placeholder.py
backend/app/pipeline/: orchestrator.py
backend/app/schemas/: filings.py  financials.py  placeholder.py  valuation.py
backend/app/services/: filings_service.py  financials.py  fmp_client.py  placeholder.py  sec_client.py  valuation.py
backend/app/shared/: __init__.py  config_helpers.py  database_helpers.py  exceptions.py  response_models.py  response_utils.py  singleton.py
backend/scripts/: README.md  test_tiingo_financial_statements.py
backend/scripts/ingestion/: s3_bulk_ingest.py  simple_bulk_ingest.py
backend/scripts/setup/: setup_s3_storage.py
data/duckdb/: market_data.db
dev_utils/: check_filing_year.py  delete_specific_top_level_summary.py  inspect_summarization_data.py
hft-core/: CMakeLists.txt  README.md  compile_commands.json
hft-core/apps/backtest_sim/: CMakeLists.txt  main.cpp
hft-core/apps/random_sim/: CMakeLists.txt  main.cpp
hft-core/apps/replay_sim/: CMakeLists.txt  main.cpp
hft-core/docs/: ARCHITECTURE.md
hft-core/include/hft/core/: affinity.hpp  backtester.hpp  events.hpp  ingress_coordinator.hpp  matching_engine.hpp  order.hpp  order_book.hpp  order_router.hpp  ring_buffer.hpp  session.hpp  shard.hpp  strategy.hpp  trade.hpp
hft-core/include/hft/core/replay/: dbn_local_source.hpp  dbn_reader.hpp  feed_source.hpp  replay_driver.hpp
hft-core/src/: affinity.cpp  backtester.cpp  ingress_coordinator.cpp  matching_engine.cpp  order_book.cpp  order_router.cpp  shard.cpp
hft-core/src/replay/: dbn_local_source.cpp  dbn_reader.cpp  replay_driver.cpp
hft-engine/: build.gradle  settings.gradle
scripts/summarizer/: get_latest_filing.py
scripts/testing/: test_data_merging.py
tasks/: todo.md
(+164 files in other folders)
